gccida/c3/eliminate_phi
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_phi/src/ssa.c:1886:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)insn_after_basic_block_note[2]; 
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_phi/src/ssa.c:1914:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( __int64)nonnote_insn[2]; 
                ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_phi/src/ssa.c:2076:20: error: use of undeclared identifier 'machine_mode'
y = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)v47 + 2)); 
                   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_phi/src/obj/ssa.o] Error 1
